fix: enable live reload and disable HTML caching for webpack dev server

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
         </header>
         <main>
             <section>
-                <h1>Вадим Кушнир - сильный программист</h1>
+                <h1>Вадим Кушн2р - сильный программист</h1>
                 <h2>Виртуоз VueJS, ценный работник и непревзойдённый аферист!</h2>
             </section>
             <!-- Здесь будут другие разделы вашего сайта, такие как портфолио, обо мне, блог и контакты -->
