--- a/src/index.html
+++ b/src/index.html
@@ -8,22 +8,34 @@
 </head>
 <body>
     <div class="wrapper"> <!-- Добавьте div с классом wrapper -->
-        <header>
-            <nav>
-                <!-- Здесь будет ваша навигационная панель, аналогичная Stack Overflow -->
-            </nav>
-        </header>
-        <main>
-            <section>
-                <h1>Вадим Кушн2р - сильный программист</h1>
-                <h2>Виртуоз VueJS, ценный работник и непревзойдённый аферист!</h2>
-            </section>
-            <!-- Здесь будут другие разделы вашего сайта, такие как портфолио, обо мне, блог и контакты -->
-        </main>
-        <footer>
-            <!-- Здесь добавьте жизнеутверждающий текст -->
-            <p>Следуйте своим мечтам и никогда не сдавайтесь!</p>
-        </footer>
+      <header>
+        <div class="logo">
+          <a href="/">Вадим Кушнир</a>
+        </div>
+        <nav>
+          <ul>
+            <li><a href="/">Главная</a></li>
+            <li><a href="/portfolio">Портфолио</a></li>
+            <li><a href="/about">Обо мне</a></li>
+            <li><a href="/blog">Блог</a></li>
+            <li><a href="/contact">Контакты</a></li>
+          </ul>
+        </nav>
+        <div class="download-resume">
+          <a href="/resume.pdf" download>Скачать резюме</a>
+        </div>
+      </header>
+      <main>
+          <section>
+              <h1>Вадим Кушн2р - сильный программист</h1>
+              <h2>Виртуоз VueJS, ценный работник и непревзойдённый аферист!</h2>
+          </section>
+          <!-- Здесь будут другие разделы вашего сайта, такие как портфолио, обо мне, блог и контакты -->
+      </main>
+      <footer>
+          <!-- Здесь добавьте жизнеутверждающий текст -->
+          <p>Следуйте своим мечтам и никогда не сдавайтесь!</p>
+      </footer>
     </div> <!-- Закройте div с классом wrapper -->
 </body>
 </html>
