--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
       </main>
       <footer>
           <!-- Здесь добавьте жизнеутверждающий текст -->
-          <p>Следуйте своим мечтам и никогда не сдавайтесь!</p>
+          <p>Кодьте, улучшайтесь и преодолевайте баги жизни!</p>
       </footer>
     </div> <!-- Закройте div с классом wrapper -->  
 </body>
