feat: Implement pause/resume on click for phrases and combine JSON files

--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
     </main>
     <footer>
         <!-- Здесь добавьте жизнеутверждающий текст -->
-        <p>Кодьте, улучшайтесь и преодолевайте баги жизни!</p>
+        <p id="footerPhrase">Кодьте, улучшайтесь и преодолевайте баги жизни!</p>
     </footer>
   </div> <!-- Закройте div с классом wrapper -->  
 </body>
