feat: added brief story of my excellence

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div class="wrapper"> <!-- Добавьте div с классом wrapper -->
+  <div class="wrapper">
     <header>
       <div class="logo">
         <a href="/">Вадим Кушнир</a>
@@ -27,8 +27,9 @@
     </header>
     <main>
         <section>
-            <h1>Вадим Кушн5р - сильный программист</h1>
+            <h1>Вадим Кушнир - сильный программист</h1>
             <h2 id="dynamicPhrase" />
+            <p>Этот сайт-портфолио демонстрирует мои технические навыки и изощрённость. Веб-интерфейс размещён на GitHub Pages, база данных с фразами находится на Firebase, а бэкенд, обрабатывающий запросы с фронтенда и получающий данные из базы, размещён на отдельном хостинге. Сложность использованных решений для такого простого проекта-самопрезентации характеризует мой высокий уровень как программиста и показывает потенциальным работодателям мою техническую находчивость.</p>
         </section>
         <!-- Здесь будут другие разделы вашего сайта, такие как портфолио, обо мне, блог и контакты -->
     </main>
@@ -36,6 +37,6 @@
         <!-- Здесь добавьте жизнеутверждающий текст -->
         <p id="footerPhrase">Кодьте, улучшайтесь и преодолевайте баги жизни!</p>
     </footer>
-  </div> <!-- Закройте div с классом wrapper -->  
+  </div>   
 </body>
 </html>
