feat: implemented telegram web-app web-interface

--- a/src/telegram-web-app.html
+++ b/src/telegram-web-app.html
@@ -8,7 +8,9 @@
   </head>
   <body>
     <div id="app">
-      <h1>HELLO WORLD!</h1>
+      <h1>HELL0 W0RLD!</h1>
     </div>
+
+    <script src="telegram-web-app.js"></script>
   </body>
 </html>
