fix: fixed extra buttons emerging

--- a/src/telegram-web-app.html
+++ b/src/telegram-web-app.html
@@ -9,6 +9,8 @@
   <body>
     <div id="app">
       <h1>HELL0 W0RLD!</h1>
+      <div id="platform-info"></div>
+      <button id="fetchDataButton">Press me</button>
     </div>
 
     <script src="telegram-web-app.js"></script>
